Fix table overflow bug (sort of, still won't handle too many columns)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -17,7 +17,8 @@ a {
 
 table {
     margin: auto;
-    width: 80%;
+    width: 100%;
+    table-layout: fixed;
     font-size: 0.85em;
     border: 1px solid #ededed;
 }
